# netsleuth

./: .gitignore  README.md  io.github.vmkspv.netsleuth.json  meson.build  netsleuth.doap
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: flatpak.yml
data/: io.github.vmkspv.netsleuth.SearchProvider.desktop.in  io.github.vmkspv.netsleuth.SearchProvider.service.in  io.github.vmkspv.netsleuth.desktop.in  io.github.vmkspv.netsleuth.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  README.md  bg.po  it.po  ja.po  meson.build  netsleuth.pot  pl.po  pt_BR.po  ru.po  tr.po  uk.po  update-pot.sh
src/: calculator.py  cmdline.py  main.py  meson.build  netsleuth.gresource.xml  netsleuth.in  netsleuth_search_provider.in  style.css  window.blp  window.py  window.ui
